# offline-stack

./: .gitignore  HttpRedirect.hs  README.md  appveyor.yml  config.yaml  http-redirect.cabal  stack.yaml
