cabal-version:      >= 1.18
build-type:         Simple
name:               offline-stack
version:            0

executable http-redirect
    default-language:   Haskell2010
    build-depends:      base, network, conduit, transformers, resourcet, conduit-extra,
                        connection, http-conduit, directory, bytestring, extra, filepath,
                        wai, warp, http-types
    main-is:            HttpRedirect.hs
